add new sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/main.css">
+    <!-- remix icon  -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,19 +37,116 @@
                 <h1>Make your dream</h1>
                 <h1>business goal come true</h1>
             </div>
-
             <span>
                 when you need us for improve your business <br>
                 then come with us to help your business have reach it, you just sit and feel that goal
             </span>
-
             <a class="btn" href="#">Start Project</a>
-
             <div class="img__container">
                 <img src="/img/welcome-banner.png" alt="office">
             </div>
         </div>
     </main>
+
+    <section class="about-us">
+        <div class="about-us__header">
+            <h2>About Us</h2>
+            <h1>Our Teammate</h1>
+        </div>
+        <div class="about-us__wrapper">
+            <div class="img-container">
+                <img src="/img/about-us.png" alt="about-us">
+            </div>
+            <div class="text-container">
+                <p>We move with make a Creative for help your business
+                    goal, we help to improve your income by a services we have.
+                    make your content look interesting and make people look for
+                    your business
+                </p>
+                <p>We move with make a Creative for help your business
+                    goal, we help to improve your income by a services we have.
+                    make your content look interesting and make people look for
+                    your business
+                </p>
+
+                <div class="button-container">
+                    <a class="btn btn_about" href="#">About Us</a>
+                    <a class="btn btn_play" href="#img1">
+                        <svg class="play-svg" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24" width="24"
+                            fill="currentColor">
+                            <path
+                                d="M10 20C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm4.126-6.254l-4.055 2.898c-.905.646-2.13.389-2.737-.576A2.201 2.201 0 0 1 7 12.898V7.102C7 5.942 7.883 5 8.972 5c.391 0 .774.124 1.099.356l4.055 2.898c.905.647 1.146 1.952.54 2.917a2.042 2.042 0 0 1-.54.575zM8.972 7.102v5.796L13.027 10 8.972 7.102z">
+                            </path>
+                        </svg>
+                        Our Story
+                    </a>
+                    <a href="#_" class="lightbox" id="img1">
+                        <div id="videoModal" class="modal hide fade in" tabindex="-1" role="dialog"
+                            aria-labelledby="videoModalLabel" aria-hidden="false" style="display: block;">
+                            <div class="modal-header">
+                                <button type="button" class="close full-height" data-dismiss="modal" aria-hidden="true">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24" width="24"
+                                        fill="currentColor">
+                                        <path
+                                            d="M11.414 10l2.829-2.828a1 1 0 1 0-1.415-1.415L10 8.586 7.172 5.757a1 1 0 0 0-1.415 1.415L8.586 10l-2.829 2.828a1 1 0 0 0 1.415 1.415L10 11.414l2.828 2.829a1 1 0 0 0 1.415-1.415L11.414 10zM4 0h12a4 4 0 0 1 4 4v12a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z">
+                                        </path>
+                                    </svg>
+                                </button>
+                            </div>
+                            <div class="modal-body"><iframe width="870" height="489"
+                                    src="https://www.youtube.com/embed/S5rvJOcff_I" frameborder="0"
+                                    allowfullscreen=""></iframe></div>
+                            <div class="modal-footer"></div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="services__text-container">
+            <h2>Our Services</h2>
+            <h1>Perfect and Fast Movement</h1>
+            <p>We move with make a Creative Strategy
+                for help your business goal, we help to improve
+                your income by a services we have make your content look interesting
+                and make yor people look for your business
+            </p>
+            <a class="btn" href="#">
+                Read More
+                <i class="ri-arrow-right-line"></i>
+            </a>
+        </div>
+
+        <div class="services__icons-container">
+            <div class="card" style="box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);">
+                <div class="card__icon-box">
+                    <img src="/img/monitor.png" alt="">
+                </div>
+                <h2>Social Media Management</h2>
+            </div>
+            <div class="card red">
+                <div class="card__icon-box">
+                    <img src="/img/settings.png" alt="">
+                </div>
+                <h2>Search Engine Optimization</h2>
+            </div>
+            <div class="card green">
+                <div class="card__icon-box">
+                    <img src="/img/pen-tool.png" alt="">
+                </div>
+                <h2>Design</h2>
+            </div>
+            <div class="card orange">
+                <div class="card__icon-box">
+                    <img src="/img/tv.png" alt="">
+                </div>
+                <h2>Ads</h2>
+            </div>
+        </div>
+    </section>
+
 
 
 </body>
