finish agency website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="nav">
             <div class="nav__logo">
-                <img src="/img/logo.png">
+                <img src="/img/welcome/logo.png">
             </div>
 
             <div class="nav__list">
@@ -43,7 +43,7 @@
             </span>
             <a class="btn" href="#">Start Project</a>
             <div class="img__container">
-                <img src="/img/welcome-banner.png" alt="office">
+                <img src="/img/welcome/welcome-banner.png" alt="office">
             </div>
         </div>
     </main>
@@ -55,7 +55,7 @@
         </div>
         <div class="about-us__wrapper">
             <div class="img-container">
-                <img src="/img/about-us.png" alt="about-us">
+                <img src="/img/about-us/about-us.png" alt="about-us">
             </div>
             <div class="text-container">
                 <p>We move with make a Creative for help your business
@@ -122,32 +122,169 @@
         <div class="services__icons-container">
             <div class="card" style="box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);">
                 <div class="card__icon-box">
-                    <img src="/img/monitor.png" alt="">
+                    <img src="/img/services/monitor.png" alt="">
                 </div>
                 <h2>Social Media Management</h2>
             </div>
             <div class="card red">
                 <div class="card__icon-box">
-                    <img src="/img/settings.png" alt="">
+                    <img src="/img/services/settings.png" alt="">
                 </div>
                 <h2>Search Engine Optimization</h2>
             </div>
             <div class="card green">
                 <div class="card__icon-box">
-                    <img src="/img/pen-tool.png" alt="">
+                    <img src="/img/services/pen-tool.png" alt="">
                 </div>
                 <h2>Design</h2>
             </div>
             <div class="card orange">
                 <div class="card__icon-box">
-                    <img src="/img/tv.png" alt="">
+                    <img src="/img/services/tv.png" alt="">
                 </div>
                 <h2>Ads</h2>
             </div>
         </div>
     </section>
 
+    <section class="portfolio">
+        <div class="portfolio__text-container">
+            <h2>Our Portfolio</h2>
+            <h1>What do we do</h1>
+            <p>
+                all projects that we have already done, proven can help to use more
+                comfortable,then can used by client from our business.
+            </p>
+        </div>
+        <img class="bg2" src="/img/portfolio/portfolio_bg.png" alt="">
+        <div class="portfolio__img-container">
+            <div class="portfolio__img-container__wrapper">
+                <img src="/img/portfolio/portfolio_1.png" alt="">
+            </div>
+            <img class="bg" src="/img/portfolio/portfolio_bg2.png" alt="">
+            <div class="portfolio__img-container__wrapper">
+                <img src="/img/portfolio/portfolio_2.png" alt="">
+            </div>
+            <div class="portfolio__img-container__wrapper">
+                <img src="/img/portfolio/portfolio_3.png" alt="">
+            </div>
+        </div>
+        <a class="btn btn_about" href="#">See All Portfolio</a>
+    </section>
 
+    <section class="testimonial">
+        <img class="bg" src="/img/testimonial/testimonial_bg.png" alt="">
+        <img class="bg2" src="/img/testimonial/testimonial_bg.png" alt="">
+        <div class="testimonial__text-container">
+            <h2>Testimonial</h2>
+            <h1>People Talk about us</h1>
+        </div>
+
+        <div class="testimonial__card-container">
+            <div class="card">
+                <div class="card__upper">
+                    <img class="avatar" src="/img/testimonial/avatar.png" alt="">
+                    <div class="card__upper-name">
+                        <h3>Angel Rose</h3>
+                        <span>Creative Manager</span>
+                    </div>
+                </div>
+                <p>There are many variations
+                    passages of Lorem Ipsum majority
+                    some by words which don't look.
+                </p>
+            </div>
+            <div class="card">
+                <div class="card__upper">
+                    <img class="avatar" src="/img/testimonial/avatar.png" alt="">
+                    <div class="card__upper-name">
+                        <h3>Angel Rose</h3>
+                        <span>Creative Manager</span>
+                    </div>
+                </div>
+                <p>There are many variations
+                    passages of Lorem Ipsum majority
+                    some by words which don't look.
+                </p>
+            </div>
+            <div class="card">
+                <div class="card__upper">
+                    <img class="avatar" src="/img/testimonial/avatar.png" alt="">
+                    <div class="card__upper-name">
+                        <h3>Angel Rose</h3>
+                        <span>Creative Manager</span>
+                    </div>
+                </div>
+                <p>There are many variations
+                    passages of Lorem Ipsum majority
+                    some by words which don't look.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="collaboration">
+        <div class="collaboration__text-container">
+            <h1>Interesting
+                Collaboration
+                With Us?
+            </h1>
+            <span>Help you to reach your business goal</span>
+            <a href="#" class="btn">
+                Get Started
+            </a>
+        </div>
+
+        <div class="collaboration__img-container">
+            <img src="/img/get-started/Group 2180.png" alt="" style="z-index:-1;">
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__container-logo">
+                <img src="/img/welcome/logo.png" alt="">
+            </div>
+
+            <div class="footer__container-link">
+                <h4>Terms & Policies</h4>
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+            <div class="footer__container-link">
+                <h4>Company</h4>
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact Us</a>
+            </div>
+            <div class="footer__container-link">
+                <h4>Contact</h4>
+                <a href="#">09271752569</a>
+                <a href="#">agencycr@gmail.com</a>
+            </div>
+            <div class="footer__container-link">
+                <h4>Location</h4>
+                <a href="#">PT Osiris Real Estate International</a>
+                <a href="#">JL KH. Hasulm Kei No.100</a>
+                <a href="#">Jakarta, Indonesia</a>
+                <a href="#">team@RealEstate.com</a>
+            </div>
+        </div>
+
+        <div class="footer-icons-container">
+            <div class="wrapper">
+                <img src="/img/footer/fb.png" alt="">
+                <img src="/img/footer/insta.png" alt="">
+                <img src="/img/footer/linkedin.png" alt="">
+                <img src="/img/footer/email.png" alt="">
+                <img src="/img/footer/twitter.png" alt="">
+            </div>
+            <div class="underline"></div>
+            <span>Copyright @ 2022 Agency Creative All Rights Reserved</span>            
+        </div>
+
+
+    </footer>
 
 </body>
 
